Bug 1595435 - Allow content to steal focus from a cross-origin iframe. r=masayuki

This matches other browsers.

Keep the restriction just to chrome nodes, and in that case, avoid getting into
the broken state, which is what causes the issue. I'm not sure if this even
matters anymore given e10s but...

Differential Revision: https://phabricator.services.mozilla.com/D57475

--HG--
extra : moz-landing-system : lando