dom/base/nsFocusManager.h
@@ -102,16 +102,6 @@ class nsFocusManager final : public nsIFocusManager,
    */
   nsresult ContentRemoved(Document* aDocument, nsIContent* aContent);
 
-  /**
-   * Called when mouse button event handling is started and finished.
-   */
-  already_AddRefed<Document> SetMouseButtonHandlingDocument(
-      Document* aDocument) {
-    RefPtr<Document> handlingDocument = mMouseButtonEventHandlingDocument;
-    mMouseButtonEventHandlingDocument = aDocument;
-    return handlingDocument.forget();
-  }
-
   void NeedsFlushBeforeEventHandling(mozilla::dom::Element* aElement) {
     if (mFocusedElement == aElement) {
       mEventHandlingNeedsFlush = true;
@@ -665,16 +655,6 @@ class nsFocusManager final : public nsIFocusManager,
   // synchronized actions cannot be interrupted with events, so queue these up
   // and fire them later.
   nsTArray<nsDelayedBlurOrFocusEvent> mDelayedBlurFocusEvents;
-
-  // A document which is handling a mouse button event.
-  // When a mouse down event process is finished, ESM sets focus to the target
-  // content if it's not consumed.  Therefore, while DOM event handlers are
-  // handling mouse down events or preceding mosue down event is consumed but
-  // handling mouse up events, they should be able to steal focus from any
-  // elements even if focus is in chrome content.  So, if this isn't nullptr
-  // and the caller can access the document node, the caller should succeed in
-  // moving focus.
-  RefPtr<Document> mMouseButtonEventHandlingDocument;
 
   // If set to true, layout of the document of the event target should be
   // flushed before handling focus depending events.
